Center zoom image. Need to fix overflow-y scroll issue still.

--- a/resets.css
+++ b/resets.css
@@ -1,9 +1,21 @@
 body {
     overflow-y: scroll;
     overflow-x: hidden;
-    margin: 0px
+    margin: 0px;
 }
 
 img {
-    margin: 4px 4px 0px
+    margin: 4px 4px 0px;
+}
+
+.zoombox {
+    display: grid;
+    height: 100vh;
+    background-color: #343642;
+}
+
+.zoom {
+    max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
 }
